# aslan-new-year

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: router.py
app/domain/: errors.py  pricing.py
app/services/: contract.py  expression.py  pdf.py  pricing.py  rules.py  schema_loader.py  validation.py
app/static/: app.js  styles.css
app/templates/: base.html  final.html  landing.html  screen.html  start.html
app/ui/: router.py
catalog/: schema.json
compose/: compose.yml
tests/: test_app.py
