[project]
name = "santa-insurance-demo"
version = "0.1.0"
description = "Demo: Новогодняя страховая компания (server-side wizard, no JS)"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.6",
  "python-multipart>=0.0.9",
  "itsdangerous>=2.1",
  "reportlab>=4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.26",
  "ruff>=0.4",
  "black>=24.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
